# BMI203-HW5-NW

./: README.md  biopy.py  main.py  pyproject.toml  test.py
align/: align.py
test/: test_align.py
