[build-system]
requires = [
    "flit_core >=3.2,<4"
]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "NW_alignment"
authors = [{name = "Zoe Chen", email = "zoe.chen2@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest"
]
requires-python = ">=3.9"

[project.urls]
Home = "https://github.com/BMI203-2025/HW5-NW"
